[tool.poetry]
name = "python-requests-rate-limiter"
version = "0.1.0"
description = ""
authors = ["Thierry Santos <thierrysantoos123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiohttp = "^3.9.5"
pyrate-limiter = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
